--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="pregunta-contenido">
             <h2>¿Qué diferencia hace en tu vida conocer a Jesús, en la forma en que ves al mundo, las decisiones que tomas y lo que esperas?</h2>
             <p>
-              La diferencia que hace es grande, él ha sido mi guía en algunos momentos difíciles
+              Vemos al mundo desde otra perspectiva, cosas que la gente ve insignificante, nosotros podemos ver mas allá de eso, Nuestra manera de pensare y ver las cosas cambian absolutamente ya que nuestra mirada esta puesta en él, siempre lo pondremos a él de primero, Mis decisiones se basarán en lo que él me diga ya que todo se hace de acuerdo a su voluntad, Cuando estamos en Jesús todo lo que se espere sabremos afrontarlo. Dios nos hace una nueva persona, Una nueva criatura en él.
             </p>
           </div>
         </div>
