--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <h2>Dios busca establecer contacto con nosotros. ¿Estás
               convencido de esto?</h2>
             <p>
+              Si, él quiere tener una relación con nosotros, como un padre a su hijo, y como rechazar esto si es una de las mejores cosas, propuestas que nos pueden dar en la vida. Una relación, una vida junto a él, lo es todo.
             </p>
             <p>
               ¿Tienes o tuviste alguna experiencia que apoye esta
