--- a/index.html
+++ b/index.html
@@ -141,8 +141,11 @@
               Si, él quiere tener una relación con nosotros, como un padre a su hijo, y como rechazar esto si es una de las mejores cosas, propuestas que nos pueden dar en la vida. Una relación, una vida junto a él, lo es todo.
             </p>
             <p>
+              <br>
               ¿Tienes o tuviste alguna experiencia que apoye esta
               afirmación?
+              <br>
+              A principio de este año tuve una crisis en mi familia que me afecto a mi en varios ámbitos de mi vida, siempre he oído que cualquier problema que tengamos le contemos a Dios porque él es como nuestro mejor amigo, al contarle todos mis problemas y decirle como me sentía, sentí su abrazo, sentí que podía dejarlo todo en sus manos y así fue, dejé todo en sus manos y todo se fue arreglando poco a poco con la ayuda de él.
             </p>
           </div>
         </div>
@@ -157,7 +160,7 @@
   <footer>
     <div class="container">
       <div class="social-links">
-        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/ZMonchoX"><i class="fab fa-github"></i></a>
       </div>
       <div class="derechos">
         <p>&copy; 2021 David Bustamante (Desarrollador Web)| Todos los derechos reservados.</p>
