--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <footer>
     <div class="container">
       <div class="social-links">
-        <a href="https://github.com/ZMonchoX"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://github.com/ZMonchoX"><i class="fab fa-github"></i></a>
       </div>
       <div class="derechos">
         <p>&copy; 2021 David Bustamante (Desarrollador Web)| Todos los derechos reservados.</p>
