--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dios dale a tu encuentro | Religión</title>
+  <title>Dios sale a tu encuentro | Religión</title>
   <!--Style.css-->
   <link rel="stylesheet" href="css/style.css">
   <!--FONT POPPINS-->
