--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </main>
   <div class="main">
     <div class="video">
-      <iframe width="675" height="350" src="https://www.youtube.com/embed/hw5h7kE0g4s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="675px" height="350px" src="https://www.youtube.com/embed/P1NuZFGZsJo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
   <footer>
